k8s/deployment-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-dev
  labels:
    app: hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
        - name: hello-world
          image: us-east1-docker.pkg.dev/hello-world-458306/hello-repo/hello:dev
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service-dev
spec:
  type: LoadBalancer
  selector:
    app: hello-world
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
