k8s/hello-world-service.yml
# hello-world-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service-prod
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: LoadBalancer
  selector:
    app: hello-world
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
